[package]
name = "tudiff"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A TUI-based directory comparison tool written in Rust - Beyond Compare style file comparator"
homepage = "https://github.com/withoutsalsu/tudiff"
repository = "https://github.com/withoutsalsu/tudiff"
readme = "README.md"
keywords = ["tui", "diff", "directory", "comparison", "file"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    ".git*",
    "target/",
    "*.tmp"
]

[[bin]]
name = "tudiff"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
similar = "2.6"
sha2 = "0.10"
indicatif = "0.17"
chrono = "0.4"
